feat: dia um de trabalho

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,4 @@
-/* Add your own custom styles here */
+/* Esconde o botão de alternar tema claro/escuro */
+.theme-switcher {
+  display: none !important;
+}
